Fix sidebar clipping on mobile

--- a/public/stylesheets/components/sidebar.scss
+++ b/public/stylesheets/components/sidebar.scss
@@ -40,6 +40,10 @@
   left: 0;
   bottom: 0;
   overflow: hidden;
+
+  @include respond-to(mobile) {
+    padding-bottom: $s-header-height;
+  }
 }
 
 .sidebar__body__list {
